--- a/index.html
+++ b/index.html
@@ -29,9 +29,20 @@
     </nav>
 
     <div id="banner" class="jumbotron text-center" style="background-color:#F397D6;">
-      <div class="caption text-dark">
-        <h1 class="display-3">Welcome To Self Care Club</h1>
-        <p class="lead">Hope you enjoy your time with us!</p>
+      <div class="row h-100">
+        <div class="caption col-xl my-auto">
+          <h3 class="display-3 text-dark">Welcome To Self Care Club</h3>
+          <p class="lead text-dark">Hope you enjoy your time with us!</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="alert alert-info alert-dismissible fade show" role="alert">
+        <strong>Hey I hope you're enjoying the Site! Check out our social media!</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
     </div>
 
@@ -49,7 +60,35 @@
       </div>
     </div>
 
-    <div class="container-fluid staff-img">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <img src="https://cdn.discordapp.com/attachments/698646505892085890/724639731576602736/Screenshot_20200622-095546_WEBTOON2.jpg" class="img-fluid" alt="">
+        </div>
+        <div class="col-md-4 w-50 h-50">
+          <img src="https://cdn.discordapp.com/attachments/698646505892085890/724015618336227478/image2.png" class="img-fluid img-thumbnail shadow" alt="">
+        </div>
+        <div class="col-md-4 w-50 h-50">
+          <img src="https://cdn.discordapp.com/attachments/698646505892085890/724015617694367785/image0.png" class="img-fluid img-thumbnail shadow" alt="">
+        </div>
+      </div>
+
+      <br>
+
+      <div class="row">
+        <div class="col-md-4">
+          <img src="https://cdn.discordapp.com/attachments/698646505892085890/722730039128489994/image0.png" class="img-fluid img-thumbnail shadow" alt="">
+        </div>
+        <div class="col-md-4">
+          <img src="https://cdn.discordapp.com/attachments/698646505892085890/719425172561723412/image0.jpg" class="img-fluid img-thumbnail shadow" alt="">
+        </div>
+        <div class="col-md-4">
+          <img src="https://cdn.discordapp.com/attachments/698646505892085890/718954017413136405/self-care.png" class="img-fluid img-thumbnail shadow" alt="">
+        </div>
+      </div>
+    </div>
+
+    <div id="staff-img" class="container-fluid">
       <div class="row h-100">
         <div class="col-sm-12 my-auto text-center">
           <h3 class="display-3 text-light">Discord Staff</h3>
