Footer and photogrid bk-color
Add a photo and changed the background color of the photo grid.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
 
-      <div class="container-fluid">
+      <div id="photo" class="container-fluid" style="background-color: rgb(175, 210, 250);">
         <ul id="categories" class="clr">
           <li class="pusher"></li>
         	<li>
@@ -144,15 +144,15 @@
                 </div>
               </div> -->
 
-    <div id="staff-img" class="container-fluid">
-      <div class="row h-100">
+      <div id="staff-img" class="container-fluid">
+        <div class="row h-100">
           <div class="col-sm-12 my-auto text-center">
             <h3 class="display-3 text-light">Discord Staff</h3>
-            </div>
           </div>
+        </div>
       </div>
 
-      <div id="wrapper" class="container-fluid" style="background-color: rgb(120,136,214)">
+      <div id="wrapper" class="container-fluid" style="background-color: rgb(120,136,214);">
 
         <table id="staffteam" class="container table">
           <!-- <thead class="text-center h3">
@@ -194,7 +194,7 @@
                 <h3>Kai</h3>
               </td>
               <td class="align-middle">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Aloha! My name is Kaila, I'm a Mod in the self-care club. I spend a lot of time at the beach and working too. Though in my free time, I love reading books and listening to music. I am sweet and easy to talk to, so if you need anyone to talk to, I am your gal. My favorite way to pratice self-care is going to the beach, listening to music and relaxing while practicing breathing excerises. This server brings me so much joy when I see all the new friendly newcomers. I hope to you there.</p>
               </td>
             </tr>
             <tr>
@@ -208,11 +208,18 @@
             </tr>
           </tbody>
         </table>
-
+        <br>
       </div>
+
+      <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+          <div class="container text-center">
+            <small>Copyright &copy; Self Care Club</small>
+          </div>
+        </footer>
 
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     </body>
+
 </html>
