--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div id="selfcaretips" class="container-fluid">
         <div class="row h-100">
             <div class="col-sm-12 my-auto text-center">
-              <h3 class="display-3 text-light">Self Care Tips and Quotes</h3>
+              <h3 class="display-3 text-light">Postive Vibes</h3>
               </div>
             </div>
         </div>
@@ -213,7 +213,7 @@
 
       <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
           <div class="container text-center">
-            <small>Copyright &copy; Self Care Club</small>
+            <small>Copyright &copy; 2020 Self Care Club</small>
           </div>
         </footer>
 
